--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-@import 'https://js.arcgis.com/4.30/@arcgis/core/assets/esri/themes/dark/main.css';
+/* @import 'https://js.arcgis.com/4.30/@arcgis/core/assets/esri/themes/dark/main.css'; */
 
- 
+@import 'https://js.arcgis.com/4.30/@arcgis/core/assets/esri/themes/light/main.css';
+
 #root,
 html,
 body,
