--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 /* @import 'https://js.arcgis.com/4.30/@arcgis/core/assets/esri/themes/dark/main.css'; */
 
-@import 'https://js.arcgis.com/4.30/@arcgis/core/assets/esri/themes/light/main.css';
+@import '@arcgis/core/assets/esri/themes/light/main.css';
 
 #root,
 html,
@@ -10,4 +10,12 @@ arcgis-map {
   width: 100vw;
   margin: 0;
   padding: 0;
+}
+
+.sceneview {
+  height: 500px;
+  width: 100%;
+  background: #ccc;
+  position: relative;
+  margin: 5px 0 5px 0;
 }
